--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+#light{
+  background-color: white;
+  color: black;
+}
+
+#dark{
+background-color:#1b1b2f;
+color: white
+}
