--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 @import "tailwindcss";
 
 * {
@@ -16,9 +17,9 @@ body {
   height: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.6;
   font-weight: 400;
   min-height: 100vh;
-  font-family: "Roboto", serif;
+  font-family: "Poppins", serif;
 }
